--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 h1 {
-  text-align: center;  
+  text-align: center;
+  font-size: 30px;
 }
 
 h2 {
   margin-left: -35px;
-  font-size: 20px
+  font-size: 20px;
 }
 
 
@@ -14,7 +15,7 @@ h2 {
 
 .student-info {
     width: 100%;
-    padding-top: 30px;
+    height: 80px;
     text-align: center;
 }
 
