class grid to create little-boxes pictures of numbers in different bases.

--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,24 @@ p {
 }
 */
 
+.grid {
+  border-collapse: collapse;
+  display: inline-block;
+  margin: 10px;
+}
+
+.grid tr {
+  border-top: solid 1px;  
+  border-bottom: solid 1px;  
+}
+
+.grid td {
+  border-left: solid 1px;
+  border-right: solid 1px;
+  padding: 0px;
+  width: 20px;
+  height: 20px;
+}
 
 .base-chart 
 {
