number each topic. add page breaks, rename tobase10

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,12 @@ p {
   margin-bottom: 0px;
 }
 
+@media print {
+  .page-break { 
+    page-break-before: always;
+  }
+}
+
 .main {
     margin-left: 50px;
 }
