--- a/css/style.css
+++ b/css/style.css
@@ -38,13 +38,13 @@ p {
 }
 
 .main {
-    margin-left: 50px;
+  margin-left: 50px;
 }
 
 .student-info {
-    width: 100%;
-    height: 80px;
-    text-align: center;
+  width: 100%;
+  height: 80px;
+  text-align: center;
 }
 
 .indent1 {
@@ -118,4 +118,38 @@ p {
 
 .series {
   word-spacing: 10px;
+}
+
+.cal-box {
+  border-collapse: collapse;
+  border: solid 2px;
+  width: 100px;
+  padding: 0px;
+  margin: 0px;
+}
+
+.cal-value {
+  font-size: 20px;  
+  font-weight: bold;  
+  text-align: center;
+  vertical-align: middle;
+  width: 25px;
+  height: 25px;
+  padding: 2px;
+  margin: -2px;
+  border: solid 2px;  
+}
+
+.cal-digits {
+  padding: 0px;
+  margin: 0px;
+  text-align: center;
+  font-size: 40px;
+  font-family: "Comic Sans MS";
+  font-weight: bold;
+}
+
+.cal-base {
+  padding: 2px;  
+  text-align: right;
 }
