more work on boxes, clarify connection to exponents / bases. page breaks

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ h2 {
 
 }
 
+ul {
+  margin: 0px 0px 0px 0px;  
+}
+
 ol {
   margin: 0px 0px 0px -40px;
   list-style: none;
@@ -86,6 +90,7 @@ p {
   border-collapse: collapse;
   display: inline-block;
   margin: 10px;
+  vertical-align: middle;
 }
 
 .grid tr {
