--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,10 @@ body {
   margin-top: 50px;  
 }
 
+.vspace3 {
+  margin-top: 150px;  
+}
+
 .meet-answers {
   margin-bottom: 30px;
   flex: 0 0 auto; 
